--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -92,3 +92,48 @@ nav .menu a{
   vertical-align: middle;
 
 }
+#aboute{
+   padding-top:130px;
+}
+#aboute .aboute-container{
+  width: 60%;
+  max-width:1140px ;
+  height:300px ;
+  margin:0 auto;
+  text-align: center;
+  background-color: #FFF8F3;
+  padding: 131px 156px;
+  
+}
+#aboute .section-heading {
+  max-width: 827px;
+  text-align: center;
+}
+.section-heading h2{
+  font-size: 35px;
+  margin-bottom: 30px;
+}
+.section-heading p {
+  font-size: 18px;
+  margin-bottom: 30px;
+  color: #757575;
+  line-height: 30px;
+}
+#aboute .aboute-container .aboute-info{
+  display : flex;
+  justify-content: space-around;
+}
+.aboute-info .info-card p {
+
+  font-size: 20px;
+  color:#757575 ;
+  line-height: 30px;
+
+}
+.aboute-info .info-card h4{
+  font-size: 20px;
+  
+
+
+}
+
